agent: Added APT package list support
The newly added functionality allows the guest agent to report installed
packages and their version even on systems with APT package managers
(e.g Debian) or both RPM + APT side by side.

Change-Id: I42d9d599b1effdd1b8c205ac9523e9b31922cd73
Signed-off-by: Vinzenz Feenstra <vfeenstr@redhat.com>

--- a/ovirt-guest-agent/ovirt-guest-agent.conf
+++ b/ovirt-guest-agent/ovirt-guest-agent.conf
@@ -8,7 +8,9 @@ heart_beat_rate = 5
 report_user_rate = 10
 report_application_rate = 120
 report_disk_usage = 300
-applications_list = kernel ovirt-guest-agent xorg-x11-drv-qxl
+# RHEL/Fedora Packages: kernel ovirt-guest-agent xorg-x11-drv-qxl
+# Debian Packages:      linux-image xserver-xorg-video-qxl
+applications_list = kernel ovirt-guest-agent xorg-x11-drv-qxl linux-image xserver-xorg-video-qxl
 ignored_fs = rootfs tmpfs autofs cgroup selinuxfs udev mqueue nfsd proc sysfs devtmpfs hugetlbfs rpc_pipefs devpts securityfs debugfs binfmt_misc
 
 [virtio]
