Updated spec file to follow packaging guide lines (BZ#772608)
* Bumped the ovirt-guest-agent version in configure.ac to 1.0.6
  as preparation for the next release
* Updated INSTALL to the current version
* autogen.sh is now using autoreconf -ivf
* Added m4 folder

Changes to spec file:
- Introduced ovirt-guest-agent-service noarch package which provides
  ovirt-guest-agent and avoids duplication of the same package content
- Fixed various rpmlint errors and warnings
- Added required build requires
- Removed unnecessary build requires
- Removed unnecessary call to autoreconf in setup section
- Marked config files as such
- Excluded unwanted files instead of deleting them
- Moved folder creation and symlink creation from spec to autotools
- License file change reflected
- Removed systemd unit file installation
- Removed creation of log and lock folders

Changes to build system:
- Added creation of /usr/share/ovirt-guest-agent
- Added creation of symlinks for:
  - ovirt-hibernate
  - ovirt-shutdown
  - ovirt-locksession
- Systemd unit files are now installed, if systemd is detected
- Log and lock folders for ovirt-guest-agent are now created on install
- Added missing -fPIC for the pam module
- Various improvements to configure.ac and several Makefile.am files in regards
  of installation directory detection and installation handling

Change-Id: Iec350b4027bffff8dff73db7986020fdc48261cd
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=772608
Signed-off-by: Vinzenz Feenstra <vfeenstr@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,4 @@
+ACLOCAL_AMFLAGS=-I m4
 
 SUBDIRS =                \
     ovirt-guest-agent    \
@@ -12,3 +13,11 @@ CLEANFILES = \
 MAINTAINERCLEANFILES = \
     config.h.in \
     Makefile.in
+
+install-exec-hook:
+	$(MKDIR_P) $(DESTDIR)/$(pkgdatadir)
+	$(LN_S) $(bindir)/consolehelper $(DESTDIR)/$(pkgdatadir)/ovirt-locksession
+	$(LN_S) $(bindir)/consolehelper $(DESTDIR)/$(pkgdatadir)/ovirt-shutdown
+	$(LN_S) $(bindir)/consolehelper $(DESTDIR)/$(pkgdatadir)/ovirt-hibernate
+	$(INSTALL) -d $(DESTDIR)/$(localstatedir)/lock/subsys/ovirt-guest-agent
+	$(INSTALL) -d $(DESTDIR)/$(localstatedir)/log/ovirt-guest-agent
