--- a/pam-ovirt-cred/Makefile.am
+++ b/pam-ovirt-cred/Makefile.am
@@ -5,6 +5,7 @@ AM_LDFLAGS = -no-undefined -avoid-version -module
 securelibdir = $(SECUREDIR)
 securelib_LTLIBRARIES = pam_ovirt_cred.la
 
+pam_ovirt_cred_la_CFLAGS=-fPIC
 pam_ovirt_cred_la_LIBADD = -lpam
 pam_ovirt_cred_la_SOURCES =  \
 			pam_ovirt_cred.c	\
