Adding unit tests
Change-Id: Ibf5c64da1904510ca2f8fb5c91756a3133b79fb3
Signed-off-by: Vinzenz Feenstra <vfeenstr@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -210,6 +210,7 @@ AC_CONFIG_FILES([
     ovirt-guest-agent/ovirt-guest-agent
     ovirt-guest-agent/consoleapps/Makefile
     ovirt-guest-agent/pam/Makefile
+    tests/Makefile
     windows-credprov/Makefile
 ])
 if test "x$sso" == "xyes"; then
