GuestAgent message validation
Change-Id: Ic96dedaa2d0cf68270be0d74eadee3108501c66a
Signed-off-by: Vinzenz Feenstra <vfeenstr@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,6 +4,6 @@ AM_LOG_FLAGS=$(top_srcdir)/tests/testrunner.py
 
 TESTS=\
     encoding_test.py \
-    linux_guest_agent_test.py \
+    guest_agent_test.py \
     $(NULL)
 
